--- a/index.html
+++ b/index.html
@@ -1,29 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com
-	/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/
-	font-awesome/5.15.3/css/all.min.css">
-	<link rel="stylesheet" href="barra.css">
-	<tittle></title>
+    <title>Hostinger</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="host.ico">
+    <link rel="stylesheet" href="barradenav.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<nav>
-			<div class="contenedor">
-				<img id="logo" src="logoh.png" alt="Hostinger">
-				<ul>
-			    <li><a href="#">Hosting</a></li>
-				<li><a href="#">VPS</a></li>
-				<li><a href="#">Email</a></li>
-				<li><a href="#">Dominio</a></li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-	
+    <header>
+        <div class="conteiner">
+        <nav>
+            <ul class="list">
+                <img src="img.png" alt="hostinger" class="png">
+                <li class="li">Ingresar</li>
+                <li>Dominio</li>
+                <li>Email</li>
+                <li>VPS</li>
+                <li>Hosting</li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+    <h2 class="subtitle">Elegi tu plan ideal de alojamiento web
+        sin impuestos extra</h2>
+    <div class="conteiner1">
+        <div>
+            <div class="hosting">
+                <h3>Hosting Premium</h3>
+                <p>Paquete perfecto para sitios web</p>
+                <div class="ahorra">
+                    <p><del>AR$2800</del>AHORRÁ 66%</p>
+                </div>
+                <div class="ahorra2">
+                    <span>AR$<b class="precio">999,00</b>/mes</span>
+                </div>
+                <div>
+                    <b class="precio mes">+ 2meses gratis</b>
+                </div>
+                <div class="ahorra3">
+                    <b class="precio carro">Añadir al carrito</b>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="hosting">
+                <h3>Hosting Empresarial</h3>
+                <p>Optimizado para empresas y sitios 
+                    de eCommerce</p>
+                <div class="ahorra">
+                    <p><del>AR$4990,00</del> AHORRÁ 72%</p>
+                </div> 
+                <div class="ahorra2">
+                    <span>AR$<b class="precio">1399,00</b>/mes</span>
+                </div>
+                <div>
+                    <b class="precio mes dos">+2 meses gratis</b>
+                </div>
+                <div class="ahorra3">
+                    <b class="precio carro tres">Añadir al carrito</b>
+                </div>   
+            </div>
+        </div>
+        <div>
+            <div class="hosting">
+                <h3>Cloud Startup</h3>
+                <p>Optimizado para webs empresariales
+                    y de eCommerce</p>
+                <div class="ahorra">
+                    <p><del>AR$7900,00</del>AHORRÁ 56%</p>
+                </div>
+                <div class="ahorra">
+                   <span>AR$<b class="precio">3499,99</b>/mes</span>
+                </div>
+                <div>
+                    <b class="precio mes">+2 meses gratis</b>
+                </div>
+                <div>
+                    <b class="precio carro">Añadir al carrito</b>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
