--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Hostinger</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="host.ico">
-    <link rel="stylesheet" href="barradenav.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title>Hostinger</title>
 </head>
+
 <body>
-    <header>
-        <div class="conteiner">
+    <div class="conteiner">
         <nav>
             <ul class="list">
                 <img src="img.png" alt="hostinger" class="png">
@@ -25,7 +22,50 @@
             </ul>
         </nav>
         </div>
-    </header>
+    <!-- insert nav(parte de victor ) -->
+    <main class="main">
+        <div homepage class="main__homepage">
+            <!-- de aquí hasta la etiqueta de cierre de la linea 54 es lo que me toco de trabajo  -->
+            <div header class="main__header">
+                <div class="main__grid-column">
+                    <div two-cols class="main__two-cols">
+                        <div cols-left class="main__cols-left cols left">
+                            <div feature class="cols-left__feature">
+                                <div h1 class="cols-left__h1">Todo lo que necesitás <br> para crear una página <br> web</div>
+                                <div overline class="cols-left__overline">Hasta <span class="cols-left__purple">66%
+                                    </span>DTO en hosting</div>
+                            </div>
+                            <div service class="cols-left__service">
+                                <div item-info class="cols-left__item info">Dominio gratis</div>
+                                <div item-support class="cols-left__item-suport">Atención al cliente 24/7</div>
+                            </div>
+                            <div section-price class="cols-left__section-price">
+                                <div price class="cols-left__price">AR$ <span class="cols-left__number">999,00</span>/mes</div>
+                            </div>
+                            <div duration countdown class="cols-left__duration-countdown">
+                                <div time class="cols-left__time">
+                                    <p class="cols-left__p">+2 meses gratis</p>
+                                </div>
+                                <div count class="cols-left__count">aquí va el cronometro</div>
+                            </div>
+                            <div buys class="cols-left__buys">
+                                <button class="cols-left__button-push">Obtener oferta</button>
+                            </div>
+                            <div service-end class="cols-left__service-end">
+                                <div warranty class="cols-left__warranty">
+                                    <span class>Garantía de reembolso del dinero de 30 días</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div col-right class="main__cols-right cols-right">
+                            <picture class="cols-right__picture"><img class="cols-right__img" src="https://www.hostinger.com.ar/h-assets/images/sales/february/homepage-hero-2x.webp" alt="imagen-girl">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <h2 class="subtitle">Elegi tu plan ideal de alojamiento web
         sin impuestos extra</h2>
     <div class="conteiner1">
@@ -75,7 +115,7 @@
                     <p><del>AR$7900,00</del>AHORRÁ 56%</p>
                 </div>
                 <div class="ahorra">
-                   <span>AR$<b class="precio">3499,99</b>/mes</span>
+                <span>AR$<b class="precio">3499,99</b>/mes</span>
                 </div>
                 <div>
                     <b class="precio mes">+2 meses gratis</b>
